--- a/fullstack/frontend/liberaries/flipkartr/package.json
+++ b/fullstack/frontend/liberaries/flipkartr/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "firebase": "^9.6.4",
+    "firebaseui": "^6.0.0",
     "json-server": "^0.17.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
@@ -14,6 +16,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-webcam": "^6.0.0",
+    "styled-components": "^5.3.3",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
