--- a/fullstack/backend/framework/flipkartBackend/package.json
+++ b/fullstack/backend/framework/flipkartBackend/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "mongoose": "^6.2.0",
+    "nodemailer": "^6.7.2",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
